--- a/src/Flashcard.form
+++ b/src/Flashcard.form
@@ -1,88 +1,146 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Flashcard">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="4380" height="701"/>
     </constraints>
-    <properties/>
+    <properties>
+      <font name="Droid Sans Mono" size="14" style="2"/>
+      <minimumSize width="-1" height="-1"/>
+      <preferredSize width="500" height="400"/>
+    </properties>
     <border type="none"/>
     <children>
-      <grid id="26de" binding="flashcardPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="26de" binding="flashcardPanel" layout-manager="GridLayoutManager" row-count="4" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="true"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="9" fill="0" indent="0" use-parent-layout="true"/>
         </constraints>
-        <properties/>
-        <border type="none" title="新词" title-justification="2"/>
+        <properties>
+          <autoscrolls value="false"/>
+          <font name="DengXian" size="12"/>
+        </properties>
+        <border type="none" title="新词" title-justification="3">
+          <font name="Droid Sans Mono" size="16"/>
+        </border>
         <children>
-          <component id="43317" class="javax.swing.JLabel" binding="simplifiedLabel">
+          <component id="8160a" class="javax.swing.JButton" binding="forgottenBtn">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="144" height="129"/>
+              <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="25"/>
               </grid>
             </constraints>
             <properties>
-              <font name="DengXian" size="72" style="1"/>
-              <text value="面条"/>
+              <autoscrolls value="false"/>
+              <label value="Forgot :("/>
+              <text value="Forgot :("/>
             </properties>
           </component>
-          <component id="741fd" class="javax.swing.JLabel">
+          <component id="5e734" class="javax.swing.JButton" binding="gotBtn">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="25"/>
+              </grid>
             </constraints>
             <properties>
-              <font name="DengXian" size="24" style="1"/>
+              <label value="Got it :)"/>
+              <text value="Got it :)"/>
+            </properties>
+          </component>
+          <component id="afc68" class="javax.swing.JLabel" binding="traditionalText">
+            <constraints>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="144" height="80"/>
+              </grid>
+            </constraints>
+            <properties>
+              <alignmentY value="0.5"/>
+              <font name="Droid Sans Mono" size="72" style="0"/>
+              <foreground color="-4473925"/>
+              <horizontalAlignment value="2"/>
+              <horizontalTextPosition value="0"/>
+              <text value="包"/>
+              <verticalAlignment value="1"/>
+            </properties>
+          </component>
+          <component id="c18fb" class="javax.swing.JLabel" binding="pinyinText">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Droid Sans Mono" size="24" style="1"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
-              <text value="miàn tiáo"/>
+              <text value="bāo"/>
               <verticalAlignment value="0"/>
               <verticalTextPosition value="0"/>
               <visible value="true"/>
             </properties>
           </component>
-          <component id="c87ae" class="javax.swing.JLabel">
+          <component id="c9b3f" class="javax.swing.JButton" binding="almostBtn">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="144" height="129"/>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="25"/>
               </grid>
             </constraints>
             <properties>
-              <font name="DengXian" size="72" style="1"/>
-              <foreground color="-8289919"/>
-              <text value="麵條"/>
+              <horizontalTextPosition value="0"/>
+              <text value="Almost"/>
             </properties>
           </component>
-          <component id="2c4df" class="javax.swing.JFormattedTextField" binding="noodleeeeeeeeeeeeeeeesFormattedTextField" default-binding="true">
+          <component id="ca409" class="javax.swing.JLabel" binding="simplifiedText">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="5" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="144" height="80"/>
               </grid>
             </constraints>
             <properties>
-              <dropMode value="INSERT"/>
-              <editable value="false"/>
-              <text value="noodleeeeeeeeeeeeeeees"/>
+              <alignmentY value="0.5"/>
+              <background color="-16777216"/>
+              <font name="Droid Sans Mono" size="72" style="1"/>
+              <foreground color="-16777216"/>
+              <horizontalAlignment value="4"/>
+              <horizontalTextPosition value="0"/>
+              <text value="包"/>
+              <verticalAlignment value="1"/>
             </properties>
           </component>
+          <scrollpane id="6ebf5">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="5" vsize-policy="7" hsize-policy="7" anchor="1" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="300" height="85"/>
+              </grid>
+            </constraints>
+            <properties>
+              <horizontalScrollBarPolicy value="30"/>
+              <opaque value="false"/>
+              <verticalScrollBarPolicy value="20"/>
+            </properties>
+            <border type="etched" title="英语">
+              <font name="Droid Sans Mono" size="12"/>
+            </border>
+            <children>
+              <component id="f6341" class="javax.swing.JTextPane" binding="meaningText">
+                <constraints/>
+                <properties>
+                  <contentType value="text/html"/>
+                  <editable value="false"/>
+                  <maximumSize width="300" height="2147483647"/>
+                  <minimumSize width="-1" height="22"/>
+                  <opaque value="false"/>
+                  <text value="&lt;html&gt;&#13;&#10;  &lt;head&gt;&#13;&#10;    &#13;&#10;  &lt;/head&gt;&#13;&#10;  &lt;body&gt;&#13;&#10;  &lt;/body&gt;&#13;&#10;&lt;/html&gt;&#13;&#10;"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
+          <hspacer id="dff9d">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="5" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
-      <component id="5e734" class="javax.swing.JButton" default-binding="true">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Got it!"/>
-        </properties>
-      </component>
-      <component id="8160a" class="javax.swing.JButton" binding="forgotButton" default-binding="true">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Forgot :/"/>
-        </properties>
-      </component>
     </children>
   </grid>
 </form>
